tdf#45147 - CSV Import: Remove special handling for mixed script types

In the CSV import dialog, remove the special handling for mixed script types. Otherwise, right-to-left words appear in the wrong order.

The special handling of mixed script types was introduced in https://bz.apache.org/ooo/show_bug.cgi?id=60296 which is handled in the edit engine now.

Change-Id: Ic6dc3f2051ea41f79db5398a8442f78116da52de
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/146096
Tested-by: Jenkins
Reviewed-by: Eike Rathke <erack@redhat.com>