sc/source/ui/dbgui/csvgrid.cxx
@@ -1130,22 +1130,8 @@ void ScCsvGrid::ImplDrawCellText( const Point& rPos, const OUString& rText )
     OUString aPlainText = rText.replaceAll( "\t", " " );
     aPlainText = aPlainText.replaceAll( "\n", " " );
     mpEditEngine->SetPaperSize( maEdEngSize );
-
-    /*  #i60296# If string contains mixed script types, the space character
-        U+0020 may be drawn with a wrong width (from non-fixed-width Asian or
-        Complex font). Now we draw every non-space portion separately. */
-    sal_Int32 nCharIxInt {aPlainText.isEmpty() ? -1 : 0};
-    while (nCharIxInt>=0)
-    {
-        sal_Int32 nBeginIx = nCharIxInt;
-        const OUString aToken = aPlainText.getToken( 0, ' ', nCharIxInt );
-        if( !aToken.isEmpty() )
-        {
-            sal_Int32 nX = rPos.X() + GetCharWidth() * nBeginIx;
-            mpEditEngine->SetTextCurrentDefaults( aToken );
-            mpEditEngine->Draw(*mpBackgrDev, Point(nX, rPos.Y()));
-        }
-    }
+    mpEditEngine->SetTextCurrentDefaults(aPlainText);
+    mpEditEngine->Draw(*mpBackgrDev, rPos);
 
     sal_Int32 nCharIx = 0;
     while( (nCharIx = rText.indexOf( '\t', nCharIx )) != -1 )
